<resources>
    <string name="app_name">فاز</string>
    <string name="hint_phone_number">شماره موبایل</string>
    <string name="str_continue">ادامه</string>
    <string name="login_desc">برای ورود یا ثبت نام شماره موبایل خود را وارد نمایید.</string>
    <string name="please_enter_sent_code">لطفا کد پیامک شده را وارد کنید</string>
    <string name="hint_verification_code">کد تایید</string>
    <string name="confirm">تایید</string>
    <string name="gender">جنسیت</string>
    <string name="city">شهر</string>
    <string name="birth_year">سال تولد</string>
    <string name="save">ذخیره</string>
    <string name="voting">رای دهی</string>
    <string name="profile">حساب کاربری</string>
    <string name="faazMosbat">فاز مثبت</string>
    <string name="profile_desc">برای شرکت در قرعه کشی، پروفایل خود را تکمیل کنید</string>
    <string name="input_is_not_valid">مقدار وارده معتبر نیست</string>
    <string name="inputs_is_not_valid">مقادیر وارد شده معتبر نیستند</string>
    <string name="boys">پسران</string>
    <string name="girls">دختران</string>
    <string name="login">ورود</string>
    <string name="you_should_login_for_voting">برای شرکت در رای گیری ابتدا وارد شوید</string>
    <string name="vote_hint">به بچه ها فاز مثبت بدهید</string>
    <string name="news_image">newsImage</string>
    <string name="competition">مسابقه</string>
    <string name="club">باشگاه</string>
    <string name="info">درباره ما</string>
    <string name="exit">خروج</string>
    <string name="login_and_register">ورود و عضویت</string>
    <string name="soon">به زودی</string>
    <string name="male_persian">مرد</string>
    <string name="female_persian">زن</string>
    <string name="male_english">male</string>
    <string name="female_english">female</string>
    <string name="skip">بعدأ</string>
    <string name="complete_later">بعدا تکمیل می کنم</string>
    <string name="version">نسخه </string>
    <string name="toolbar_name">toolbar</string>
    <string name="news_title">news_title</string>
    <string name="no_internet_connection">برنامه قادر به اتصال به سرور نیست</string>
    <string name="you_should_login_first">ابتدا وارد شوید</string>
    <string name="your_score">امتیاز شما:</string>
    <string name="resend_code">ارسال مجدد</string>
    <string name="remaining_time">زمان باقیمانده</string>
    <string name="seconds">ثانیه</string>
    <string name="unfortunately_phase_is_enable">متاسفانه فاز غیرفعال است</string>
    <string name="augmented_reality">واقعیت افزوده</string>
    <string name="news">خبرها</string>
    <string name="movie_page">صفحه فیلم</string>
    <string name="image_gallery">گالری عکس</string>
    <string name="movie_gallery">گالری فیلم</string>
    <string name="image_transition">imageTransition</string>
    <string name="lottery">قرعه کشی</string>
    <string name="please_enter_lottery_code">لطفا کد قرعه کشی را وارد نمایید</string>
    <string name="hint_lottery_code">کد قرعه کشی</string>
    <string name="send">ارسال</string>
    <string name="augmented_reality_hint">برای نمایش محتوای واقعیت افزوده،\n دوربین تلفن همراه خود را در مقابل محصولی که از AR پشتیبانی میکند بگیرید
    </string>
    <string name="production">تولید</string>
    <string name="videos">ویدیوها</string>
    <string name="images">عکس ها</string>
    <string name="until">تا</string>
    <string name="contact_us">تماس با ما</string>
    <string name="vote_confirmation">پس از تایید، رای شما قابل بازگشتن نخواهد بود. از ثبت این رای مطمئن هستید؟</string>
    <string name="voted_successfully">رای شما با موفقیت ثبت شد</string>
    <string name="i_agree">متن را مطالعه کرده و شرایط را قبول دارم</string>
    <string name="start">شروع کن!</string>
    <string name="faz_meter">فاز متر</string>
    <string name="upload">بارگزاری</string>
    <string name="faz_meter_scanning">پویش فازمتر</string>
    <string name="upload_image">بارگذاری عکس</string>
    <string name="choose_image_file"><u>انتخاب فایل عکس</u></string>
    <string name="description">توضیحات</string>
    <string name="title">عنوان</string>
    <string name="upload_text">بارگذاری متن</string>
    <string name="upload_video">بارگذاری ویدیو</string>
    <string name="change_image_file">تغییر فایل عکس</string>
    <string name="choose_video_file"><u>انتخاب فایل ویدیو</u></string>
    <string name="change_video_file">تغییر فایل ویدیو</string>
    <string name="only_one_time_you_can_upload_video">فقط یکبار میتوانید فایل ویدیو را آپلود کنید</string>
    <string name="only_one_time_you_can_upload_image">فقط یکبار میتوانید فایل عکس را آپلود کنید</string>
    <string name="poll">نظرسنجی</string>
</resources>
