<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_logo" />

    <com.owjmedia.faaz.general.utils.CustomWidgets.TypefacedTextView
        android:id="@+id/txtHint"
        style="@style/CustomTextView"
        android:layout_below="@+id/imgLogo"
        android:text="@string/login_desc"
        android:textStyle="bold" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPhone"
        style="@style/CustomTextInputLayout"
        android:layout_below="@+id/txtHint"
        android:layout_marginTop="32dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtPhone"
            style="@style/CustomTextInputEditText"
            android:hint="@string/hint_phone_number"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <com.owjmedia.faaz.general.utils.CustomWidgets.TypefacedTextView
        android:id="@+id/btnContinue"
        style="@style/ClickableTextView"
        android:layout_below="@+id/tilPhone"
        android:layout_marginTop="64dp"
        android:text="@string/str_continue" />


</RelativeLayout>