<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blure_bg">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_logo_transparent" />

    <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
        android:id="@+id/txtHint"
        style="@style/WhiteDescriptionTextView"
        android:layout_below="@+id/imgLogo"
        android:text="@string/please_enter_sent_code" />

    <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceEditText
        android:id="@+id/edtCode"
        style="@style/CustomEditText"
        android:layout_below="@+id/txtHint"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_verification_code"
        android:inputType="number" />


    <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
        android:id="@+id/btnContinue"
        style="@style/ClickableTextView"
        android:layout_below="@+id/edtCode"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:text="@string/confirm" />

    <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
        android:id="@+id/txt_timer"
        style="@style/WhiteDescriptionTextView"
        android:layout_below="@+id/btnContinue" />

</RelativeLayout>