<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_gravity="end">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_header"
            style="@style/MenuItem"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_logo_menu" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_profile"
            style="@style/MenuItem">

            <ImageView
                android:id="@+id/img_account"
                style="@style/MenuItemIcon"
                android:src="@drawable/ic_account_circle" />

            <com.owjmedia.faaz.general.utils.CustomWidgets.TypefacedTextView
                android:id="@+id/txt_profile"
                style="@style/MenuItemText"
                android:layout_toLeftOf="@+id/img_account"
                android:text="@string/profile" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_vote"
            style="@style/MenuItem">

            <ImageView
                android:id="@+id/img_poll"
                style="@style/MenuItemIcon"
                android:src="@drawable/ic_poll" />

            <com.owjmedia.faaz.general.utils.CustomWidgets.TypefacedTextView
                android:id="@+id/txt_poll"
                style="@style/MenuItemText"
                android:layout_toLeftOf="@+id/img_poll"
                android:text="@string/voting" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_competition"
            style="@style/MenuItem">

            <ImageView
                android:id="@+id/img_competition"
                style="@style/MenuItemIcon"
                android:src="@drawable/ic_casino" />

            <com.owjmedia.faaz.general.utils.CustomWidgets.TypefacedTextView
                android:id="@+id/txt_competition"
                style="@style/MenuItemText"
                android:layout_toLeftOf="@+id/img_competition"
                android:text="@string/lottery" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_club"
            style="@style/MenuItem">

            <ImageView
                android:id="@+id/img_club"
                style="@style/MenuItemIcon"
                android:src="@drawable/ic_group" />

            <com.owjmedia.faaz.general.utils.CustomWidgets.TypefacedTextView
                android:id="@+id/txt_club"
                style="@style/MenuItemText"
                android:layout_toLeftOf="@+id/img_club"
                android:text="@string/club" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_info"
            style="@style/MenuItem">

            <ImageView
                android:id="@+id/img_info"
                style="@style/MenuItemIcon"
                android:src="@drawable/ic_info" />

            <com.owjmedia.faaz.general.utils.CustomWidgets.TypefacedTextView
                android:id="@+id/txt_info"
                style="@style/MenuItemText"
                android:layout_toLeftOf="@+id/img_info"
                android:text="@string/info" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_exit"
            style="@style/MenuItem">

            <ImageView
                android:id="@+id/img_exit"
                style="@style/MenuItemIcon"
                android:src="@drawable/ic_exit_to_app" />

            <com.owjmedia.faaz.general.utils.CustomWidgets.TypefacedTextView
                android:id="@+id/txt_exit"
                style="@style/MenuItemText"
                android:layout_toLeftOf="@+id/img_exit"
                android:text="@string/exit" />
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>