<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@drawable/bg_dlg"
    android:orientation="vertical">

    <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
        style="@style/WarningStyle"
        android:text="@string/only_one_time_you_can_upload_video" />

    <View style="@style/BorderStyle" />

    <VideoView
        android:id="@+id/video_view"
        android:layout_width="256dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:padding="8dp" />


    <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
        android:id="@+id/btn_choose_file"
        style="@style/LinkStyle"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/choose_video_file" />

    <ProgressBar
        android:id="@+id/prg_upload"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:indeterminateOnly="false"
        android:max="100"
        android:progressDrawable="@drawable/progress_upload"
        android:visibility="gone" />

    <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
        android:id="@+id/btn_upload_file"
        style="@style/ClickableTextView"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/upload_video"
        android:visibility="gone" />
</LinearLayout>