<FrameLayout android:id="@+id/contentFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/card_ar"
                style="@style/ArCardView">

                <ImageView
                    style="@style/HomeCardImageView"
                    android:src="@drawable/ic_augmented_reality" />

                <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
                    style="@style/HomeCardTextView"
                    android:text="@string/augmented_reality" />
            </RelativeLayout>

            <LinearLayout style="@style/HomeLinearView">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_news"
                    style="@style/HomeCardView">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            style="@style/HomeCardImageView"
                            android:src="@drawable/ic_newspaper" />

                        <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
                            style="@style/HomeCardTextView"
                            android:text="@string/news" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_movie"
                    style="@style/HomeCardView">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            style="@style/HomeCardImageView"
                            android:src="@drawable/ic_film" />

                        <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
                            style="@style/HomeCardTextView"
                            android:text="@string/movie_page" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>


            <LinearLayout style="@style/HomeLinearView">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_gallery_image"
                    style="@style/HomeCardView">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            style="@style/HomeCardImageView"
                            android:src="@drawable/ic_picture" />

                        <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
                            style="@style/HomeCardTextView"
                            android:text="@string/image_gallery" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_gallery_videos"
                    style="@style/HomeCardView">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            style="@style/HomeCardImageView"
                            android:src="@drawable/ic_video_player" />

                        <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
                            style="@style/HomeCardTextView"
                            android:text="@string/movie_gallery" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>