<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/blure_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
            style="@style/WhiteDescriptionTextView"
            android:text="@string/faz_meter_scanning" />

        <View
            android:layout_width="160dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@color/colorWhite" />


        <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
            android:id="@+id/txt_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text_description"
            android:padding="8dp"
            android:textColor="@color/colorWhite" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/i_agree"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkbox_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp" />


        </LinearLayout>


        <com.owjmedia.faaz.general.utils.CustomWidgets.TypefaceTextView
            android:id="@+id/btn_start"
            style="@style/StartButton"
            android:enabled="false"
            android:text="@string/start" />

    </LinearLayout>
</ScrollView>